# optpp

./: .gitignore  .travis.yml  CMakeLists.txt  README
include/: NLF.h  OPT++_config.h.cmake.in
newmat11/: Makefile.am  myexcept.h  precisio.h
src/: Makefile.am
src/Base/: NLP0.C  linesearch.C  mcsrch.C
src/GSS/: OptGSS.C
src/Newton/: OptBCNewton.C  OptLBFGS.C  OptNIPSLike.C  OptNewtonLike.C
src/PDS/: Makefile.am
src/Utils/: Makefile.am
